# rust-getting-started

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config
Src/: main.rs
